<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_login"
        android:title="@string/open_login"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_dashboard"
        android:title="@string/open_dashboard"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_register"
        android:title="@string/open_register"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reload"
        android:title="@string/reload"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>
